// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip component should apply values from theme 1`] = `
<View
  collapsable={false}
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text>
      Press me
    </Text>
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onDismiss={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(250, 250, 250, 0.70)",
          "flex": 1,
          "opacity": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 0,
              "left": 0,
              "overflow": "visible",
              "position": "absolute",
              "top": 0,
              "width": 0,
            }
          }
        >
          <Text>
            Press me
          </Text>
        </View>
        <View
          style={
            Object {
              "left": -7.5,
              "position": "absolute",
              "top": -2,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "pink",
                "borderBottomWidth": 15,
                "borderLeftColor": "transparent",
                "borderLeftWidth": 8,
                "borderRightColor": "transparent",
                "borderRightWidth": 8,
                "borderStyle": "solid",
                "height": 0,
                "width": 0,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "pink",
              "borderRadius": 10,
              "display": "flex",
              "flex": 1,
              "height": 100,
              "justifyContent": "center",
              "left": -17.999,
              "padding": 10,
              "position": "absolute",
              "top": 10,
              "width": 200,
            }
          }
          testID="tooltipPopoverContainer"
        >
          <Text>
            Info here
          </Text>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`Tooltip component should display tooltip 1`] = `
<View
  collapsable={false}
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text>
      Press me
    </Text>
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onDismiss={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(250, 250, 250, 0.70)",
          "flex": 1,
          "opacity": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 0,
              "left": 0,
              "overflow": "visible",
              "position": "absolute",
              "top": 0,
              "width": 0,
            }
          }
        >
          <Text>
            Press me
          </Text>
        </View>
        <View
          style={
            Object {
              "left": -7.5,
              "position": "absolute",
              "top": -2,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#617080",
                "borderBottomWidth": 15,
                "borderLeftColor": "transparent",
                "borderLeftWidth": 8,
                "borderRightColor": "transparent",
                "borderRightWidth": 8,
                "borderStyle": "solid",
                "height": 0,
                "width": 0,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#617080",
              "borderRadius": 10,
              "display": "flex",
              "flex": 1,
              "height": 100,
              "justifyContent": "center",
              "left": -17.999,
              "padding": 10,
              "position": "absolute",
              "top": 10,
              "width": 200,
            }
          }
          testID="tooltipPopoverContainer"
        >
          <Text>
            Info here
          </Text>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`Tooltip component should render without issues 1`] = `
<View
  collapsable={false}
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text>
      Press me
    </Text>
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onDismiss={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(250, 250, 250, 0.70)",
          "flex": 1,
          "opacity": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 0,
              "left": 0,
              "overflow": "visible",
              "position": "absolute",
              "top": 0,
              "width": 0,
            }
          }
        >
          <Text>
            Press me
          </Text>
        </View>
        <View
          style={
            Object {
              "left": -7.5,
              "position": "absolute",
              "top": -2,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#617080",
                "borderBottomWidth": 15,
                "borderLeftColor": "transparent",
                "borderLeftWidth": 8,
                "borderRightColor": "transparent",
                "borderRightWidth": 8,
                "borderStyle": "solid",
                "height": 0,
                "width": 0,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#617080",
              "borderRadius": 10,
              "display": "flex",
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "left": -17.999,
              "padding": 10,
              "position": "absolute",
              "top": 10,
              "width": 150,
            }
          }
          testID="tooltipPopoverContainer"
        >
          <Text>
            Info here
          </Text>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`Tooltip component should return children for Falsy toggleOnPress 1`] = `
<View
  collapsable={false}
>
  <Text>
    Press me
  </Text>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onDismiss={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(250, 250, 250, 0.70)",
          "flex": 1,
          "opacity": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 0,
              "left": 0,
              "overflow": "visible",
              "position": "absolute",
              "top": 0,
              "width": 0,
            }
          }
        >
          <Text>
            Press me
          </Text>
        </View>
        <View
          style={
            Object {
              "left": -7.5,
              "position": "absolute",
              "top": -2,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#617080",
                "borderBottomWidth": 15,
                "borderLeftColor": "transparent",
                "borderLeftWidth": 8,
                "borderRightColor": "transparent",
                "borderRightWidth": 8,
                "borderStyle": "solid",
                "height": 0,
                "width": 0,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#617080",
              "borderRadius": 10,
              "display": "flex",
              "flex": 1,
              "height": 100,
              "justifyContent": "center",
              "left": -17.999,
              "padding": 10,
              "position": "absolute",
              "top": 10,
              "width": 200,
            }
          }
          testID="tooltipPopoverContainer"
        >
          <Text>
            Info here
          </Text>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;
